fix Product Card Info overflow

--- a/client/components/Product/Card/card.scss
+++ b/client/components/Product/Card/card.scss
@@ -202,11 +202,12 @@
   left: 0px;
   top: 0px;
   width: 100%;
-  height: 100%;
+  height: 75.5%;
   padding: 30px;
   font-size: 14px;
   line-height: 150%;
   z-index: 1;
+  overflow: hidden;
   visibility: hidden;
   opacity: 0;
   background: $color-dark-2;
